k8s/resturant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
  namespace: food-delivery
spec:
  selector:
    app: restaurant-service
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
  type: ClusterIP
